Added headers to listView

--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -13,6 +13,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:divider="@android:color/transparent"
+        android:headerDividersEnabled="true"
         android:dividerHeight="0dp" />
     <com.andexert.library.RippleView
         android:id="@+id/boxoffice_list_ripple_fab"
@@ -31,4 +32,10 @@
         fab:fab_colorPressed="@color/green_900"
         fab:fab_colorRipple="@color/green_700" />
     </com.andexert.library.RippleView>
+    <TextView
+        android:id="@+id/boxoffice_list_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="THIS IS A HEAAAAAAAAAAAAAADER"/>
 </FrameLayout>
