--- a/app/src/main/res/layout/list_full_card.xml
+++ b/app/src/main/res/layout/list_full_card.xml
@@ -10,15 +10,30 @@
     android:descendantFocusability="afterDescendants"
     android:minHeight="158dp"
     android:minWidth="100dp">
-
+    <LinearLayout
+        android:id="@+id/header_layout"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
+        <TextView
+            android:id="@+id/header_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/header_placeholder"
+            android:textColor="@color/pale_black"/>
+        <View
+            android:background="#399322"
+            android:layout_width = "match_parent"
+            android:layout_height="1dp" />
+    </LinearLayout>
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="@drawable/transparent_selector"
         android:layout_margin="5dp"
-
+        android:layout_below="@id/header_layout"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="3dp">
 
@@ -55,7 +70,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingBottom="14dp"
-                        android:text="POSITION. TITLE (YEAR)"
+                        android:text="@string/title_placeholder"
                         android:textColor="@android:color/black"
                         android:textStyle="bold|italic" />
 
@@ -63,65 +78,25 @@
                         android:id="@+id/fragment_list_item_runtime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="RUNTIME: "
+                        android:text="@string/runtime_placeholder2"
                         android:textColor="@color/pale_black" />
 
                     <TextView
                         android:id="@+id/fragment_list_item_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="RELEASE DATE: "
+                        android:text="@string/release_placeholder"
                         android:textColor="@color/pale_gray" />
 
                     <TextView
                         android:id="@+id/fragment_list_item_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Critics Score: "
+                        android:text="@string/critics_placeholder"
                         android:textColor="@color/pale_gray" />
 
                 </LinearLayout>
-                <!--<View
-                    android:id="@+id/pr_bar_bot"
-                    android:layout_width="200dp"
-                    android:layout_height="10dp"
-                    android:layout_gravity="start"
-                    android:visibility="visible"
-                    android:background="@drawable/critics_score_bar"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginBottom="1dp"/>-->
-                <!--  <View
-                      android:id="@+id/pr_bar_top"
-                      android:layout_width="200dp"
-                      android:layout_height="10dp"
-                      android:layout_gravity="start"
-                      android:visibility="visible"
-                      android:background="@android:color/white"
-                      android:layout_alignParentBottom="true"
-                      android:layout_alignParentStart="true"
-                      android:layout_alignParentLeft="true"
-                      android:layout_marginBottom="1dp"/>-->
-                <!--    <View
-                        android:id="@+id/pr_bar_mid"
-                        android:layout_width="50dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="start"
-                        android:visibility="visible"
-                        android:background="#FFFF00"
-                        android:layout_toRightOf="@id/pr_bar_bot"
-                        android:layout_alignParentBottom="true"/>
-                    <View
-                        android:id="@+id/pr_bar_top"
-                        android:layout_width="50dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="start"
-                        android:visibility="visible"
-                        android:background="#00FF00"
-                        android:layout_toRightOf="@id/pr_bar_mid"
-                        android:layout_alignParentBottom="true"
-                        />-->
+
                 <ImageView
                     android:id="@+id/fragment_list_more"
                     android:layout_width="wrap_content"
@@ -129,6 +104,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_gravity="end"
+                    android:contentDescription="@string/fragment_more_description"
                     android:src="@drawable/ic_action_navigation_more_vert" />
                 <Button
                     android:id="@+id/fragment_list_add_to_fav"
@@ -176,6 +152,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
+                    android:contentDescription="@string/rtn_link_description"
                     android:maxHeight="40dp"
                     android:src="@drawable/rtlogo_small" />
             </com.andexert.library.RippleView>
@@ -197,7 +174,8 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     android:maxHeight="40dp"
-                    android:src="@drawable/imdb_small" />
+                    android:src="@drawable/imdb_small"
+                    android:contentDescription="@string/imdb_link_description" />
             </com.andexert.library.RippleView>
         </android.support.v7.widget.CardView>
     </LinearLayout>
