--- a/app/src/main/res/layout/fragment_intheaters.xml
+++ b/app/src/main/res/layout/fragment_intheaters.xml
@@ -4,6 +4,7 @@
     xmlns:ripple="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f1f1f1"
     android:paddingTop="?android:attr/actionBarSize">
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
