--- a/app/src/main/res/layout/grid_full_card.xml
+++ b/app/src/main/res/layout/grid_full_card.xml
@@ -16,43 +16,66 @@
         <com.menil.rottenmovies.RemoteImageView
             android:id="@+id/full_card_img"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="230dp"
             android:adjustViewBounds="true"
             android:background="#f1f1f1"
             android:scaleType="fitXY" />
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/full_card_under"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/full_card_img"
             android:layout_gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/full_card_small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:background="#f1f1f1" />
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/full_card_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toEndOf="@id/full_card_small"
-                android:layout_toRightOf="@id/full_card_small"
-                android:contentDescription="@string/app_name"
+                android:contentDescription="@string/movie_title_placeholder"
                 android:ellipsize="end"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textColor="@color/pale_black"
                 android:textSize="18sp" />
-        </RelativeLayout>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
+            <TextView
+                android:id="@+id/full_card_subtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/movie_subtitle_placeholder"
+                android:ellipsize="end"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="@string/app_name"
+                android:textColor="@color/pale_gray"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/fragment_grid_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/full_card_img"
+            android:layout_gravity="end"
+            android:contentDescription="@string/fragment_more_description"
+            android:src="@drawable/ic_action_navigation_more_vert" />
+        <ImageView
+            android:id="@+id/fragment_grid_fav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+           android:layout_alignParentTop="true"
+            android:layout_gravity="end"
+            android:contentDescription="@string/fragment_more_description"
+            android:src="@drawable/ic_action_favorite" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
