Added some visual effects and DetailsActivity

--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -7,7 +7,7 @@
     android:paddingTop="?android:attr/actionBarSize">
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/boxoffice_list"
+        android:id="@+id/favourites_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
@@ -16,21 +16,21 @@
         android:headerDividersEnabled="true"
         android:dividerHeight="0dp" />
     <com.andexert.library.RippleView
-        android:id="@+id/boxoffice_list_ripple_fab"
+        android:id="@+id/favourites_list_ripple_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         ripple:rv_rippleDuration="700">
-    <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/boxoffice_list_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_action_up"
-        fab:fab_colorNormal="@color/green"
-        fab:fab_colorPressed="@color/green_900"
-        fab:fab_colorRipple="@color/green_700" />
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/favourites_list_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_action_up"
+            fab:fab_colorNormal="@color/green"
+            fab:fab_colorPressed="@color/green_900"
+            fab:fab_colorRipple="@color/green_700" />
     </com.andexert.library.RippleView>
 
 </FrameLayout>
