--- a/app/src/main/res/layout/list_full_card.xml
+++ b/app/src/main/res/layout/list_full_card.xml
@@ -1,40 +1,44 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:ripple="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="false"
-    android:focusable="false"
     android:background="@android:color/transparent"
+    android:clickable="false"
     android:descendantFocusability="afterDescendants"
+    android:focusable="false"
     android:minHeight="158dp"
     android:minWidth="100dp">
+
     <LinearLayout
         android:id="@+id/header_layout"
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/header_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/header_placeholder"
-            android:textSize="18sp"
-            android:textColor="@color/pale_black"/>
+            android:textColor="@color/pale_black"
+            android:textSize="18sp" />
+
         <View
-            android:background="#399322"
-            android:layout_width = "match_parent"
-            android:layout_height="1dp" />
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#399322" />
     </LinearLayout>
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/header_layout"
         android:layout_gravity="center"
         android:layout_margin="5dp"
-        android:layout_below="@id/header_layout"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="3dp">
 
@@ -66,37 +70,48 @@
                     android:layout_margin="5dp"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/fragment_list_item_title"
+                    <RelativeLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="14dp"
-                        android:text="@string/title_placeholder"
-                        android:maxWidth="210dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="17sp"
-                        android:textStyle="bold|italic" />
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/fragment_list_item_runtime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/runtime_placeholder2"
-                        android:textColor="@color/pale_black" />
+                        <TextView
+                            android:id="@+id/fragment_list_item_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxWidth="210dp"
+                            android:layout_alignParentTop="true"
+                            android:text="@string/title_placeholder"
+                            android:textColor="@android:color/black"
+                            android:textSize="17sp"
+                            android:textStyle="bold|italic" />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_alignParentBottom="true">
+                        <TextView
+                            android:id="@+id/fragment_list_item_runtime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/runtime_placeholder2"
+                            android:textColor="@color/pale_black" />
 
-                    <TextView
-                        android:id="@+id/fragment_list_item_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/release_placeholder"
-                        android:textColor="@color/pale_gray" />
+                        <TextView
+                            android:id="@+id/fragment_list_item_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/release_placeholder"
+                            android:textColor="@color/pale_gray" />
 
-                    <TextView
-                        android:id="@+id/fragment_list_item_rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/critics_placeholder"
-                        android:textColor="@color/pale_gray" />
+                        <TextView
+                            android:id="@+id/fragment_list_item_rating"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/critics_placeholder"
+                            android:textColor="@color/pale_gray" />
+                        </LinearLayout>
+                    </RelativeLayout>
+
 
                 </LinearLayout>
 
@@ -109,19 +124,20 @@
                     android:layout_gravity="end"
                     android:contentDescription="@string/fragment_more_description"
                     android:src="@drawable/ic_action_navigation_more_vert" />
+
                 <Button
                     android:id="@+id/fragment_list_add_to_fav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginEnd="25dp"
+                    android:layout_marginRight="25dp"
                     android:layout_toLeftOf="@id/fragment_list_more"
                     android:layout_toStartOf="@id/fragment_list_more"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="25dp"
-                    android:layout_marginEnd="25dp"
-                    android:textSize="15sp"
                     android:padding="6dp"
-                    android:text="@string/add_to_favourites"/>
+                    android:text="@string/add_to_favourites"
+                    android:textSize="15sp" />
             </RelativeLayout>
 
         </LinearLayout>
@@ -144,12 +160,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end">
+
             <com.andexert.library.RippleView
                 android:id="@+id/fragment_list_item_ripple_rtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                ripple:rv_centered="true"
-                app:rv_color="@android:color/holo_red_dark">
+                app:rv_color="@android:color/holo_red_dark"
+                ripple:rv_centered="true">
+
                 <ImageView
                     android:id="@+id/fragment_list_item_rtn_link"
                     android:layout_width="wrap_content"
@@ -165,20 +183,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end">
+
             <com.andexert.library.RippleView
                 android:id="@+id/fragment_list_item_ripple_imdb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                ripple:rv_centered="true"
-                app:rv_color="@android:color/holo_purple">
+                app:rv_color="@android:color/holo_purple"
+                ripple:rv_centered="true">
+
                 <ImageView
                     android:id="@+id/fragment_list_item_imdb_link"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
+                    android:contentDescription="@string/imdb_link_description"
                     android:maxHeight="40dp"
-                    android:src="@drawable/imdb_small"
-                    android:contentDescription="@string/imdb_link_description" />
+                    android:src="@drawable/imdb_small" />
             </com.andexert.library.RippleView>
         </android.support.v7.widget.CardView>
     </LinearLayout>
