--- a/app/src/main/res/layout/details_card_test.xml
+++ b/app/src/main/res/layout/details_card_test.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/fragment_details_card_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="140dp"
                 android:layout_alignParentTop="true">
 
                 <LinearLayout
@@ -59,7 +59,23 @@
                             android:layout_marginTop="0.5dp"
                             android:scaleType="fitCenter"
                             android:src="@drawable/empty_img" />
-
+                        <TextView
+                            android:id="@+id/fragment_details_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_toRightOf="@id/fragment_details_img"
+                            android:layout_toEndOf="@id/fragment_details_img"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp"
+                            android:text="@string/movie_title_placeholder"
+                            android:singleLine="true"
+                            android:scrollHorizontally="true"
+                            android:ellipsize="marquee"
+                            android:textStyle="bold|italic"
+                            android:textColor="@color/pale_black"
+                            android:textSize="20sp" />
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -69,17 +85,7 @@
                             android:orientation="vertical"
                             android:padding="5dp">
 
-                            <TextView
-                                android:id="@+id/fragment_details_title"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="10dp"
-                                android:ellipsize="end"
-                                android:maxLength="25"
-                                android:text="@string/movie_title_placeholder"
-                                android:textStyle="bold|italic"
-                                android:textColor="@color/pale_black"
-                                android:textSize="20sp" />
+
 
                             <TextView
                                 android:id="@+id/fragment_details_runtime"
@@ -103,9 +109,15 @@
                                 android:id="@+id/fragment_details_cast"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="start"
+                                android:gravity="bottom"
+                                android:scrollHorizontally="true"
+                                android:ellipsize="marquee"
+                                android:singleLine="true"
+                                android:paddingLeft="0dp"
+                                android:paddingRight="50dp"
+                                android:paddingEnd="50dp"
                                 android:text="@string/cast_placeholder"
-                                android:textColor="@color/pale_gray"
+                                android:textColor="@color/green_700"
                                 android:textSize="14sp" />
                         </LinearLayout>
 
