--- a/app/src/main/res/layout/grid_full_card.xml
+++ b/app/src/main/res/layout/grid_full_card.xml
@@ -35,28 +35,48 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/movie_title_placeholder"
                 android:ellipsize="end"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="15dp"
+                android:paddingEnd="15dp"
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textColor="@color/pale_black"
-                android:textSize="18sp" />
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
+                android:textSize="18sp"
+                android:textStyle="bold|italic"/>
+
             <TextView
                 android:id="@+id/full_card_subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/movie_subtitle_placeholder"
                 android:ellipsize="end"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/app_name"
                 android:textColor="@color/pale_gray"
                 android:textSize="14sp" />
 
+
         </LinearLayout>
+        <Space
+            android:id="@+id/full_card_space"
+            android:layout_below="@+id/full_card_under"
+            android:layout_width="match_parent"
+            android:layout_height="16dp" />
+        <TextView
+            android:id="@+id/full_card_actors"
+            android:layout_below="@id/full_card_space"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/movie_subtitle_placeholder"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:scrollHorizontally="true"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:text="@string/app_name"
+            android:textColor="@color/green_700"
+            android:textSize="13sp" />
         <ImageView
             android:id="@+id/fragment_grid_more"
             android:layout_width="wrap_content"
@@ -73,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-           android:layout_alignParentTop="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="end"
             android:contentDescription="@string/fragment_more_description"
             android:src="@drawable/ic_action_favorite" />
