--- a/app/src/main/res/layout/list_full_card.xml
+++ b/app/src/main/res/layout/list_full_card.xml
@@ -67,7 +67,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:layout_margin="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:paddingTop="3dp"
                     android:orientation="vertical">
 
                     <RelativeLayout
@@ -78,11 +83,15 @@
                             android:id="@+id/fragment_list_item_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:maxWidth="210dp"
                             android:layout_alignParentTop="true"
+                            android:layout_marginRight="30dp"
+                            android:layout_marginEnd="30dp"
                             android:text="@string/title_placeholder"
                             android:textColor="@android:color/black"
-                            android:textSize="17sp"
+                            android:textSize="19sp"
+                            android:singleLine="true"
+                            android:scrollHorizontally="true"
+                            android:ellipsize="marquee"
                             android:textStyle="bold|italic" />
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -94,6 +103,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/runtime_placeholder2"
+                            android:textSize="16sp"
                             android:textColor="@color/pale_black" />
 
                         <TextView
@@ -101,14 +111,16 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/release_placeholder"
+                            android:textSize="14sp"
                             android:textColor="@color/pale_gray" />
 
                         <TextView
                             android:id="@+id/fragment_list_item_rating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textSize="14sp"
                             android:text="@string/critics_placeholder"
-                            android:textColor="@color/pale_gray" />
+                            android:textColor="@color/green_700" />
                         </LinearLayout>
                     </RelativeLayout>
 
