--- a/app/src/main/res/layout/details_card.xml
+++ b/app/src/main/res/layout/details_card.xml
@@ -20,7 +20,7 @@
             android:adjustViewBounds="true"
             android:padding="0dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/image_ori2" />
+            android:src="@drawable/empty_img" />
 
         <android.support.v7.widget.CardView
             android:id="@+id/fragment_details_card_title"
