Finished DetailsView, polished other layouts.

--- a/app/src/main/res/layout/grid_full_card.xml
+++ b/app/src/main/res/layout/grid_full_card.xml
@@ -34,11 +34,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/movie_title_placeholder"
-                android:ellipsize="end"
                 android:paddingLeft="10dp"
                 android:paddingRight="15dp"
                 android:paddingEnd="15dp"
                 android:singleLine="true"
+                android:scrollHorizontally="true"
+                android:ellipsize="marquee"
                 android:text="@string/app_name"
                 android:textColor="@color/pale_black"
                 android:textSize="18sp"
