--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_action_refresh"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:title="@string/action_refresh" />
     <item
         android:id="@+id/action_settings"
@@ -16,6 +16,7 @@
         android:id="@+id/action_exit"
         android:orderInCategory="200"
         app:showAsAction="never"
-        android:title="@string/action_exit" />
+        android:title="@string/action_exit"
+        />
 
 </menu>
