--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sliding_layout"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_details_sliding_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
     sothree:panelHeight="142dp"
     sothree:shadowHeight="4dp">
+
     <ImageView
         android:id="@+id/fragment_details_img_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/empty_img" />
+        android:src="@drawable/empty_img_big" />
 
-   <include layout="@layout/fragment_details_pane"/>
+    <include layout="@layout/fragment_details_pane" />
 
 
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
