--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -13,14 +13,10 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:divider="@android:color/transparent"
-        android:headerDividersEnabled="true"
-        android:dividerHeight="0dp" />
-    <com.andexert.library.RippleView
-        android:id="@+id/favourites_list_ripple_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        ripple:rv_rippleDuration="700">
+        android:dividerHeight="0dp"
+        android:headerDividersEnabled="true" />
+
+
         <com.melnykov.fab.FloatingActionButton
             android:id="@+id/favourites_list_fab"
             android:layout_width="wrap_content"
@@ -31,6 +27,5 @@
             fab:fab_colorNormal="@color/green"
             fab:fab_colorPressed="@color/green_900"
             fab:fab_colorRipple="@color/green_700" />
-    </com.andexert.library.RippleView>
 
 </FrameLayout>
