--- a/app/src/main/res/layout/fragment_details_pane.xml
+++ b/app/src/main/res/layout/fragment_details_pane.xml
@@ -1,7 +1,5 @@
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:sothree="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/tools"
     android:id="@+id/fragment_details_card_relative"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -35,32 +33,34 @@
                     android:scaleType="fitXY"
 
                     android:src="@drawable/empty_img" />
+
                 <TextView
                     android:id="@+id/fragment_details_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_toRightOf="@id/fragment_details_img"
-                    android:layout_toEndOf="@id/fragment_details_img"
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
-                    android:text="@string/movie_title_placeholder"
-                    android:singleLine="true"
-                    android:scrollHorizontally="true"
+                    android:layout_toEndOf="@id/fragment_details_img"
+                    android:layout_toRightOf="@id/fragment_details_img"
                     android:ellipsize="marquee"
-                    android:textStyle="bold|italic"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:text="@string/movie_title_placeholder"
                     android:textColor="@color/pale_black"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold|italic" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/fragment_details_title"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="37dp"
                     android:layout_toEndOf="@id/fragment_details_img"
                     android:layout_toRightOf="@id/fragment_details_img"
-                    android:orientation="vertical"
-                    android:layout_marginTop="35dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/fragment_details_runtime"
@@ -84,8 +84,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
-                        android:scrollHorizontally="true"
                         android:ellipsize="marquee"
+                        android:scrollHorizontally="true"
                         android:singleLine="true"
                         android:text="@string/cast_placeholder"
                         android:textColor="@color/green_700"
@@ -100,23 +100,44 @@
         android:id="@+id/fragment_details_card_synopsis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-10dp"
-        android:layout_below="@+id/fragment_details_fab">
+        android:layout_below="@+id/fragment_details_card_title">
 
-        <TextView
-            android:id="@+id/fragment_details_synopsis"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:ellipsize="end"
-            android:gravity="fill_horizontal"
-            android:paddingBottom="10dp"
-            android:paddingEnd="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="7dp"
-            android:text="@string/synopsis"
-            android:textColor="@color/pale_black"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fragment_details_synopsis_title"
+                android:text="@string/synopsis_title"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="7dp"
+                android:layout_marginBottom="-15dp"
+                android:textColor="@color/pale_black"
+                android:textSize="16sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#399322"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="7dp"/>
+            <TextView
+                android:id="@+id/fragment_details_synopsis"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="fill_horizontal"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/synopsis"
+                android:textColor="@color/pale_black"
+                android:textSize="15sp" />
+            </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -124,13 +145,13 @@
         android:id="@+id/fragment_details_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@id/fragment_details_card_title"
-        android:layout_marginBottom="-45dp"
-        android:layout_marginTop="-10dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/ic_action_favorite"
-        sothree:fab_colorRipple="@android:color/white"
         sothree:fab_colorNormal="@color/green"
-        sothree:fab_colorPressed="@color/green_500" />
+        sothree:fab_colorPressed="@color/green_500"
+        sothree:fab_colorRipple="@android:color/white" />
 </RelativeLayout>
