--- a/app/src/main/res/layout/fragment_favourites_2.xml
+++ b/app/src/main/res/layout/fragment_favourites_2.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/gallery_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/gallery_title"
         android:text="nesto"
-        android:textColor="@color/material_blue_500"/>
-
+        android:textColor="@color/material_blue_500" />
 
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
-        android:layout_gravity="bottom"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="100dp"
         android:src="@drawable/actionbar_icon" />
 
 </LinearLayout>
