--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/header_text"
@@ -9,9 +10,10 @@
         android:layout_height="wrap_content"
         android:text="@string/header_placeholder"
         android:textColor="@color/pale_black"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
+
     <View
-        android:background="#399322"
-        android:layout_width = "match_parent"
-        android:layout_height="1dp" />
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#399322" />
 </LinearLayout>
