--- a/app/src/main/res/layout/list_full_card.xml
+++ b/app/src/main/res/layout/list_full_card.xml
@@ -61,7 +61,6 @@
                 android:src="@drawable/empty_img" />
 
 
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -71,12 +70,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginStart="7dp"
-                    android:layout_marginRight="0dp"
                     android:layout_marginEnd="0dp"
-                    android:paddingTop="3dp"
-                    android:orientation="vertical">
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginStart="7dp"
+                    android:orientation="vertical"
+                    android:paddingTop="3dp">
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -87,43 +86,45 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentTop="true"
-                            android:layout_marginRight="30dp"
                             android:layout_marginEnd="30dp"
+                            android:layout_marginRight="30dp"
+                            android:ellipsize="marquee"
+                            android:scrollHorizontally="true"
+                            android:singleLine="true"
                             android:text="@string/title_placeholder"
                             android:textColor="@android:color/black"
                             android:textSize="19sp"
-                            android:singleLine="true"
-                            android:scrollHorizontally="true"
-                            android:ellipsize="marquee"
                             android:textStyle="bold|italic" />
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_alignParentBottom="true">
-                        <TextView
-                            android:id="@+id/fragment_list_item_runtime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/runtime_placeholder2"
-                            android:textSize="16sp"
-                            android:textColor="@color/pale_black" />
+                            android:layout_alignParentBottom="true"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/fragment_list_item_date"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/release_placeholder"
-                            android:textSize="14sp"
-                            android:textColor="@color/pale_gray" />
+                            <TextView
+                                android:id="@+id/fragment_list_item_runtime"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/runtime_placeholder2"
+                                android:textColor="@color/pale_black"
+                                android:textSize="16sp" />
 
-                        <TextView
-                            android:id="@+id/fragment_list_item_rating"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="14sp"
-                            android:text="@string/critics_placeholder"
-                            android:textColor="@color/green_700" />
+                            <TextView
+                                android:id="@+id/fragment_list_item_date"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/release_placeholder"
+                                android:textColor="@color/pale_gray"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/fragment_list_item_rating"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/critics_placeholder"
+                                android:textColor="@color/green_700"
+                                android:textSize="14sp" />
                         </LinearLayout>
                     </RelativeLayout>
 
