--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,22 +1,21 @@
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context=".Main">
     <item
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_action_refresh"
-        app:showAsAction="always"
-        android:title="@string/action_refresh" />
+        android:title="@string/action_refresh"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        app:showAsAction="never"
-        android:title="@string/action_settings" />
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_exit"
         android:orderInCategory="200"
-        app:showAsAction="never"
         android:title="@string/action_exit"
-        />
+        app:showAsAction="never" />
 
 </menu>
