--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingTop="?android:attr/actionBarSize">
+    <EditText
+        android:id="@+id/search_textbox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:maxLines="2"
+        android:text="Search..."
+        android:textSize="18sp"/>
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/boxoffice_list"
+        android:id="@+id/search_listview"
+        android:layout_below="@id/search_textbox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
@@ -16,14 +30,15 @@
         android:headerDividersEnabled="true" />
 
     <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/boxoffice_list_fab"
+        android:id="@+id/search_list_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_action_up"
+        android:src="@drawable/abc_ic_search_api_mtrl_alpha"
         fab:fab_colorNormal="@color/green"
         fab:fab_colorPressed="@color/green_900"
         fab:fab_colorRipple="@color/green_700" />
-
-</FrameLayout>
+</RelativeLayout>
