--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="3dp">
 
@@ -36,6 +36,8 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
                 android:background="#399322" />
 
             <Space
@@ -50,6 +52,8 @@
                 android:text="@string/about_msg"
                 android:textColor="@color/pale_gray"
                 android:textSize="20sp" />
+
+
         </LinearLayout>
 
 
@@ -60,97 +64,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_about_card_title"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:orientation="horizontal"
+            android:layout_gravity="center"
             android:paddingLeft="5dp"
             android:paddingRight="5dp">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/fragment_about_card_abh"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                card_view:cardCornerRadius="2dp"
-                card_view:cardElevation="4dp">
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_abh_small" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_abh_small" />
-            </android.support.v7.widget.CardView>
-
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/fragment_about_card_rt"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                card_view:cardCornerRadius="2dp"
-                card_view:cardElevation="4dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_rtlogo_small" />
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/fragment_about_card_imdb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                card_view:cardCornerRadius="2dp"
-                card_view:cardElevation="4dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_imdb_small" />
-            </android.support.v7.widget.CardView>
-
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/fragment_about_card_fb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                card_view:cardCornerRadius="2dp"
-                card_view:cardElevation="4dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_fb_small" />
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/fragment_about_card_tw"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                card_view:cardCornerRadius="2dp"
-                card_view:cardElevation="4dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_tw_small" />
-            </android.support.v7.widget.CardView>
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/ic_rtlogo_small" />
 
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
+    <ImageView
+        android:layout_below="@id/fragment_about_card_abh_thanks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:contentDescription="@string/btm_img_icon"
+        android:scaleType="fitEnd"
+        android:src="@drawable/actionbar_icon" />
 
 </RelativeLayout>
