--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,9 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -78,11 +80,18 @@
            </HorizontalScrollView>
            </LinearLayout>
     </android.support.v7.widget.CardView>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginLeft="7dp"
+        android:background="#399322" />
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="5dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -135,12 +144,64 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <ImageView
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginLeft="7dp"
+        android:background="#399322" />
+
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:contentDescription="@string/slide_arrows"
-        android:src="@drawable/slide_invert" />
+        android:padding="10dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="5dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:orientation="horizontal">
+
+
+            <ImageView
+                android:id="@+id/fragment_home_abh_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/rtn_link_description"
+                android:maxHeight="40dp"
+                android:src="@drawable/ic_abh_small" />
+
+            <ImageView
+                android:id="@+id/fragment_home_rtn_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/rtn_link_description"
+                android:maxHeight="40dp"
+                android:src="@drawable/rtlogo_small" />
+
+            <ImageView
+                android:id="@+id/fragment_home_imdb_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/imdb_link_description"
+                android:maxHeight="40dp"
+                android:src="@drawable/imdb_small" />
+
+    </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:scaleType="fitStart"
+            android:contentDescription="@string/slide_arrows"
+            android:src="@drawable/slide_invert" />
+</android.support.v7.widget.CardView>
+
 
 
     <ImageView
