--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,18 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Main">
     <item
+        android:id="@+id/action_search"
+        android:orderInCategory="100"
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+        android:title="Search"
+        app:showAsAction="ifRoom"
+        />
+    <item
         android:id="@+id/action_refresh"
+        android:orderInCategory="200"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/action_refresh"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="300"
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_exit"
-        android:orderInCategory="200"
+        android:orderInCategory="400"
         android:title="@string/action_exit"
         app:showAsAction="never" />
 
