--- a/app/src/main/res/layout/fragment_details_pane.xml
+++ b/app/src/main/res/layout/fragment_details_pane.xml
@@ -125,18 +125,22 @@
                 android:layout_marginLeft="7dp"
                 android:layout_marginRight="7dp"
                 android:layout_marginBottom="7dp"/>
-            <TextView
-                android:id="@+id/fragment_details_synopsis"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="fill_horizontal"
-                android:paddingBottom="10dp"
-                android:paddingEnd="10dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="@string/synopsis"
-                android:textColor="@color/pale_black"
-                android:textSize="15sp" />
+           <ScrollView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+               <TextView
+                   android:id="@+id/fragment_details_synopsis"
+                   android:layout_width="wrap_content"
+                   android:layout_height="fill_parent"
+                   android:gravity="fill_horizontal"
+                   android:paddingBottom="10dp"
+                   android:paddingEnd="10dp"
+                   android:paddingLeft="10dp"
+                   android:paddingRight="10dp"
+                   android:text="@string/synopsis"
+                   android:textColor="@color/pale_black"
+                   android:textSize="15sp" />
+               </ScrollView>
             </LinearLayout>
 
     </android.support.v7.widget.CardView>
