--- a/app/src/main/res/layout/grid_full_card.xml
+++ b/app/src/main/res/layout/grid_full_card.xml
@@ -35,9 +35,10 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/movie_title_placeholder"
                 android:ellipsize="marquee"
-                android:paddingEnd="15dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:text="@string/app_name"
