--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,10 +5,10 @@
     <item
         android:id="@+id/action_search"
         android:orderInCategory="100"
-        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         android:title="Search"
-        app:showAsAction="ifRoom"
-        />
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+        app:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.widget.SearchView" />
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="200"
