--- a/app/src/main/res/layout/fragment_details_pane.xml
+++ b/app/src/main/res/layout/fragment_details_pane.xml
@@ -32,7 +32,8 @@
                     android:layout_marginTop="0.5dp"
                     android:scaleType="fitXY"
 
-                    android:src="@drawable/empty_img" />
+                    android:src="@drawable/empty_img"
+                    android:contentDescription="@string/details_img" />
 
                 <TextView
                     android:id="@+id/fragment_details_title"
