--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:ripple="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="?android:attr/actionBarSize">
 
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/favourites_list"
+        android:id="@+id/fragment_favourites_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
+        android:scrollbarThumbVertical="@drawable/scrollbar_color"
         android:headerDividersEnabled="true" />
-
-
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/favourites_list_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_action_up"
-            fab:fab_colorNormal="@color/green"
-            fab:fab_colorPressed="@color/green_900"
-            fab:fab_colorRipple="@color/green_700" />
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/favourites_list_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/delete"
+        fab:fab_colorNormal="@color/green"
+        fab:fab_colorPressed="@color/green_900"
+        fab:fab_colorRipple="@color/green_700" />
 
 </FrameLayout>
