--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,7 +100,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Favourites"
+                android:text="@string/favourites"
                 android:textColor="@color/pale_gray"
                 android:textSize="25sp" />
             <HorizontalScrollView
